Some changes are made

--- a/frontend/src/components/dashboard/Dashboard.module.css
+++ b/frontend/src/components/dashboard/Dashboard.module.css
@@ -4,6 +4,7 @@
     flex-wrap: wrap;
     row-gap: 16px;
     gap: 20px;
+    background-color: aquamarine;
 }
 .studentDetails{
     display: flex;
