--- a/frontend/src/components/Layout.module.css
+++ b/frontend/src/components/Layout.module.css
@@ -8,11 +8,13 @@
   padding: 20px;
   box-sizing: border-box;
   gap: 20px;
+  background-color: aquamarine;
 }
 .maincontent{
   background-color: var(--color-bg);
   flex-grow: 1;
   padding: 0;
+  background-color: aquamarine;
   
   
 }
