--- a/frontend/src/components/Layout.module.css
+++ b/frontend/src/components/Layout.module.css
@@ -14,7 +14,8 @@
   flex-grow: 1;
   padding: 0;
   display: flex;
-  justify-content: center;
+  align-items: start;
+  justify-content: start;
 }
 
 @media (max-width: 768px) {
