--- a/frontend/src/components/Layout.module.css
+++ b/frontend/src/components/Layout.module.css
@@ -1,4 +1,5 @@
 .main{
+  width: 100vw;
   background-color: var(--color-bg);
 }
 
@@ -21,5 +22,10 @@
 @media (max-width: 768px) {
   .maincontent {
     z-index: 998;
+  }
+}
+@media (max-width: 768px){
+  .maincontainer{
+    flex-direction: column;
   }
 }
