--- a/frontend/src/components/login/Login.module.css
+++ b/frontend/src/components/login/Login.module.css
@@ -10,6 +10,8 @@
     justify-content: center;
     width: 50%;
     height: 100%;
+    padding: 50px;
+    box-sizing: border-box;
     background-color: var(--color-accent);
 }
 .collegeDetails, .name {
@@ -20,6 +22,7 @@
 }
 .collegeDetails{
     gap: 20px;
+    text-align: center;
 }
 .name{
     gap: 10px;
@@ -49,11 +52,11 @@
 
 .loginContainer {
   width: 300px;
-  height: 500px;
   margin: 60px auto;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  gap: 30px;
+  justify-content: center;
   background-color: #ffffff;
   border-radius: 20px;
   padding: 40px 32px;
@@ -71,7 +74,7 @@ input {
   border: none;
   width: 100%;
   border-bottom: 2px solid #1B1B1B;
-  padding: 10px 5px;
+  padding: 10px 0px;
   font-size: 16px;
   font-family: inherit;
   outline: none;
@@ -81,6 +84,34 @@ input {
 input::placeholder {
   color: #777;
 }
+
+.password {
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.password input {
+  width: 100%;
+  padding-right: 40px; /* space for the icon */
+  box-sizing: border-box;
+}
+
+.password .togglePassword {
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #555;
+  transition: color 0.2s ease;
+}
+
+.password .togglePassword:hover {
+  color: #000;
+}
+
 
 button {
   margin-top: 10px;
@@ -111,4 +142,28 @@ button:hover {
   font-size: 14px;
   margin-top: 4px;
   text-align: center;
+}
+
+
+@media (max-width: 780px) {
+
+  .overallContainer{
+    flex-direction: column;
+    gap: 20px;
+    background-color: var(--color-accent);
+  }
+  .rightContainer{
+    width: 100%;
+    padding-top: 20px;
+  }
+  .leftContainer{
+    width: 100%;
+    margin-left: 0;
+    border-radius: 30px 30px 0 0;
+  }
+
+  .loginContainer{
+    width: 60%;
+  }
+  
 }
