--- a/frontend/src/components/attendance/AttendancePerSubject.module.css
+++ b/frontend/src/components/attendance/AttendancePerSubject.module.css
@@ -1,28 +1,63 @@
+.attendancePerSubject{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: start;
+  justify-content: start;
+}
 .overallContainer{
     display: flex;
     gap: 20px;
+    flex-wrap: wrap;
+}
+.attendancePerSubject h1{
+  font-size: var(--font-body-lg);
 }
 
 .subContainer{
-    width: 200px;
-    height: 200px;
+  display: flex;
+  flex-grow: 1;
+  justify-content: space-between;
+  align-items: center;
+  min-width: 200px;
+  max-width: 300px;
     padding: 10px;
-    background-color: #34d399;
+    background-color: var(--color-primary);
+    color: var(--color-bg);
     border-radius: 12px;
     box-shadow: var(--shadow-card);
     gap: 10px;
 }
-
-.progressBar {
-  width: 100%;
-  height: 12px;
-  background: #e5e7eb;
-  border-radius: 6px;
-  overflow: hidden;
+.subContainer h2{
+  font-size: var(--font-sm);
+  font-weight: 400;
 }
+.subContainer h3{
+  font-size: var(--font-xs);
+  font-weight: 200;
+}
+.subDetails{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
 
 .progress {
   height: 100%;
   background: linear-gradient(90deg, #34d399, #10b981);
   transition: width 0.4s ease;
+}
+.progressBar{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+  width: 100px;
+}
+@media (max-width: 600px){
+  .subContainer{
+    width: 100%;
+    max-width: none;
+  }
 }
