--- a/frontend/src/components/profile/ProjectSection.module.css
+++ b/frontend/src/components/profile/ProjectSection.module.css
@@ -24,6 +24,12 @@
   flex-direction: column;
   align-items: flex-start;
 }
+.card button{
+  padding: 10px;
+  font-size: var(--font-sm);
+  margin-bottom: 10px;
+  margin-left: 14rem;
+}
 .projectContent{
     padding: 1rem;
     gap: 8px;
